# cezfuzzer

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.template  README.md  TODO  build.sh  cheatsheet  commander.py  config.yaml  config_template.yaml  entities_config.json  prerequities.sh  radamsa  test.cpp
commander/: config_loader.py  docker_build.py  docker_launcher.py  docker_network.py  main.py  redirection_injector.py  utils.py
docker/: Dockerfile.fuzzer_1  Dockerfile.udp_entity1  Dockerfile.udp_entity2  entrypoint_udp_entity1.sh  entrypoint_udp_entity2.sh
luncher/: CMakeLists.txt
luncher/client/: CMakeLists.txt
luncher/client/inc/: Client.hpp
luncher/client/src/: Client.cpp
luncher/server/: CMakeLists.txt
luncher/server/inc/: Server.hpp  ServerUtils.hpp
luncher/server/src/: Server.cpp
luncher/utils/: CMakeLists.txt  ConfigurationManager.cpp  ConfigurationManager.hpp  ExecutionManager.cpp  ExecutionManager.hpp  Messages.h
proxy/: CMakeLists.txt
proxy/inc/: Connection.hpp  Fuzzer.hpp  ProxyBase.hpp  TCPConnection.hpp  TCPHandler.hpp  UDPConnection.hpp  UDPHandler.hpp
proxy/lib/: ConfigurationManager.cpp  ConfigurationManager.hpp
proxy/src/: Fuzzer.cpp  ProxyBase.cpp  TCPConnection.cpp  TCPHandler.cpp  UDPConnection.cpp  UDPHandler.cpp  main.cpp
proxy/utils/: ConfigurationManager.cpp
src/: CMakeLists.txt  test1-fuzzer.cpp
test_src/: CMakeLists.txt  tcp_client.cpp  tcp_server.cpp  udp_client.cpp
test_suites/: config.yaml  config_TCP_test.yaml  config_UDP_dynamic_port-multiple-clients.yaml  config_UDP_dynamic_port_client.yaml  config_UDP_stack_overflow.yaml  config_no_port_udp.yaml
tests/: CMakeLists.txt
tests/TCP-Infinite-Loop/: client.py  server.py
tests/UDP_Dificulty_1/test_counter/: client.py  server.py
tests/UDP_Dificulty_1/test_echo/: client.py  server.py
tests/udp_infinite_loop/: main.py
tests/vuln-udp-dynamic-port-entity/: CMakeLists.txt  README  client_dynamic.c  server_primary.c
tests/vuln-udp-master-slave-broadcast/: CMakeLists.txt  README  master.c  slave.c
tests/vuln-udp-pingpong-infinite/: CMakeLists.txt  README  pingpong.c
tests/vuln-udp-simple-file-transfer/: CMakeLists.txt  file_client.c  ftserver.c
tests/vuln-udp-stack-overflow/: CMakeLists.txt  README  client.c  server.c
